changed topic encodings

--- a/twitter_issues_dashboard/notebooks/Model Training.ipynb
+++ b/twitter_issues_dashboard/notebooks/Model Training.ipynb
@@ -21,93 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "7743c783-0f05-414c-99f2-26c2c88a82c5",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>topic_hl_encoded</th>\n",
-       "      <th>topic_hl</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Customer Service</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1938</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Royal Reply</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2004</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Politics</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2115</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Royal Mail Jobs</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2207</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Finance News</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2386</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Philately</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2409</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Politcs</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      topic_hl_encoded          topic_hl\n",
-       "0                    0  Customer Service\n",
-       "1938                 6       Royal Reply\n",
-       "2004                 4          Politics\n",
-       "2115                 5   Royal Mail Jobs\n",
-       "2207                 1      Finance News\n",
-       "2386                 2         Philately\n",
-       "2409                 3           Politcs"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "df_a = pd.read_csv(r\"C:\\Users\\johna\\anaconda3\\envs\\twitter-analytics-env\\twitter_issues_dashboard\\twitter_issues_dashboard\\data\\02_intermediate\\training_data.csv\")\n",
@@ -115,8 +34,7 @@
     "\n",
     "df = df_a.merge(right=mapping, how='inner', right_on='topic_sortedc_str', left_on='topic_sortedc_str')[['cleaned_text', 'topic_hl']]\n",
     "df['topic_hl_encoded'] = df['topic_hl'].astype(\"category\").cat.codes\n",
-    "df[['topic_hl_encoded', 'topic_hl']].drop_duplicates()\n",
-    "# .to_csv(r\"C:\\Users\\johna\\anaconda3\\envs\\twitter-analytics-env\\twitter_issues_dashboard\\twitter_issues_dashboard\\data\\02_intermediate\\topic_encoding.csv\")"
+    "df[['topic_hl_encoded', 'topic_hl']].drop_duplicates().sort_values('topic_hl_encoded').to_csv(r\"C:\\Users\\johna\\anaconda3\\envs\\twitter-analytics-env\\twitter_issues_dashboard\\twitter_issues_dashboard\\data\\02_intermediate\\topic_encoding.csv\")"
    ]
   },
   {
